samples/_failures_safe/1761605726_805f3c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c36d0ec0.c: In function ‘main’:
./samples/SAFE/__tmp_c36d0ec0.c:149:26: error: missing terminating " character
  149 |     mat2.rows = read_int("Rows (1-
      |                          ^~~~~~~~~
./samples/SAFE/__tmp_c36d0ec0.c:149:5: error: expected expression at end of input
  149 |     mat2.rows = read_int("Rows (1-
      |     ^~~~
./samples/SAFE/__tmp_c36d0ec0.c:149:17: error: too few arguments to function ‘read_int’
  149 |     mat2.rows = read_int("Rows (1-
      |                 ^~~~~~~~
./samples/SAFE/__tmp_c36d0ec0.c:15:5: note: declared here
   15 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_c36d0ec0.c:149:5: error: expected declaration or statement at end of input
  149 |     mat2.rows = read_int("Rows (1-
      |     ^~~~
